--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class = "streams" id = "it" onclick = "streams(this)">
           <button><img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB3aWR0aD0iMjA0OCIg%0D%0AaGVpZ2h0PSIxNzkyIiB2aWV3Qm94PSIwIDAgMjA0OCAxNzkyIiB4bWxucz0iaHR0cDovL3d3dy53%0D%0AMy5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik0xODU2IDk5MnYtODMycTAtMTMtOS41LTIyLjV0LTIy%0D%0ALjUtOS41aC0xNjAwcS0xMyAwLTIyLjUgOS41dC05LjUgMjIuNXY4MzJxMCAxMyA5LjUgMjIuNXQy%0D%0AMi41IDkuNWgxNjAwcTEzIDAgMjIuNS05LjV0OS41LTIyLjV6bTEyOC04MzJ2MTA4OHEwIDY2LTQ3%0D%0AIDExM3QtMTEzIDQ3aC01NDRxMCAzNyAxNiA3Ny41dDMyIDcxIDE2IDQzLjVxMCAyNi0xOSA0NXQt%0D%0ANDUgMTloLTUxMnEtMjYgMC00NS0xOXQtMTktNDVxMC0xNCAxNi00NHQzMi03MCAxNi03OGgtNTQ0%0D%0AcS02NiAwLTExMy00N3QtNDctMTEzdi0xMDg4cTAtNjYgNDctMTEzdDExMy00N2gxNjAwcTY2IDAg%0D%0AMTEzIDQ3dDQ3IDExM3oiLz48L3N2Zz4=" alt="" class = "streamsLogo"></button></div>
         <div class = "streams" id = "ece" onclick = "streams(this)">
-          <button onclick = "streams(this)">
+          <button>
             <img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB3aWR0aD0iMTc5MiIg%0D%0AaGVpZ2h0PSIxNzkyIiB2aWV3Qm94PSIwIDAgMTc5MiAxNzkyIiB4bWxucz0iaHR0cDovL3d3dy53%0D%0AMy5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik0yNTYgMTQ0MHYxOTJxMCAxNC05IDIzdC0yMyA5aC0x%0D%0AOTJxLTE0IDAtMjMtOXQtOS0yM3YtMTkycTAtMTQgOS0yM3QyMy05aDE5MnExNCAwIDIzIDl0OSAy%0D%0AM3ptMzg0LTEyOHYzMjBxMCAxNC05IDIzdC0yMyA5aC0xOTJxLTE0IDAtMjMtOXQtOS0yM3YtMzIw%0D%0AcTAtMTQgOS0yM3QyMy05aDE5MnExNCAwIDIzIDl0OSAyM3ptMzg0LTI1NnY1NzZxMCAxNC05IDIz%0D%0AdC0yMyA5aC0xOTJxLTE0IDAtMjMtOXQtOS0yM3YtNTc2cTAtMTQgOS0yM3QyMy05aDE5MnExNCAw%0D%0AIDIzIDl0OSAyM3ptMzg0LTM4NHY5NjBxMCAxNC05IDIzdC0yMyA5aC0xOTJxLTE0IDAtMjMtOXQt%0D%0AOS0yM3YtOTYwcTAtMTQgOS0yM3QyMy05aDE5MnExNCAwIDIzIDl0OSAyM3ptMzg0LTUxMnYxNDcy%0D%0AcTAgMTQtOSAyM3QtMjMgOWgtMTkycS0xNCAwLTIzLTl0LTktMjN2LTE0NzJxMC0xNCA5LTIzdDIz%0D%0ALTloMTkycTE0IDAgMjMgOXQ5IDIzeiIvPjwvc3ZnPg==" alt="" class="streamsLogo">
-          </button>
+          </button>      
         </div>
         <div class = "streams" id = "ice" onclick = "streams(this)">
           <button>
@@ -21,12 +21,12 @@
           </button>
         </div>
         <div class = "streams" id = "mpae" onclick = "streams(this)">
-          <button onclick = "streams(this)">
+          <button>
             <img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB3aWR0aD0iMjA0OCIg%0D%0AaGVpZ2h0PSIxNzkyIiB2aWV3Qm94PSIwIDAgMjA0OCAxNzkyIiB4bWxucz0iaHR0cDovL3d3dy53%0D%0AMy5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik00ODAgMTA4OHEwLTY2LTQ3LTExM3QtMTEzLTQ3LTEx%0D%0AMyA0Ny00NyAxMTMgNDcgMTEzIDExMyA0NyAxMTMtNDcgNDctMTEzem0zNi0zMjBoMTAxNmwtODkt%0D%0AMzU3cS0yLTgtMTQtMTcuNXQtMjEtOS41aC03NjhxLTkgMC0yMSA5LjV0LTE0IDE3LjV6bTEzNzIg%0D%0AMzIwcTAtNjYtNDctMTEzdC0xMTMtNDctMTEzIDQ3LTQ3IDExMyA0NyAxMTMgMTEzIDQ3IDExMy00%0D%0ANyA0Ny0xMTN6bTE2MC05NnYzODRxMCAxNC05IDIzdC0yMyA5aC05NnYxMjhxMCA4MC01NiAxMzZ0%0D%0ALTEzNiA1Ni0xMzYtNTYtNTYtMTM2di0xMjhoLTEwMjR2MTI4cTAgODAtNTYgMTM2dC0xMzYgNTYt%0D%0AMTM2LTU2LTU2LTEzNnYtMTI4aC05NnEtMTQgMC0yMy05dC05LTIzdi0zODRxMC05MyA2NS41LTE1%0D%0AOC41dDE1OC41LTY1LjVoMjhsMTA1LTQxOXEyMy05NCAxMDQtMTU3LjV0MTc5LTYzLjVoNzY4cTk4%0D%0AIDAgMTc5IDYzLjV0MTA0IDE1Ny41bDEwNSA0MTloMjhxOTMgMCAxNTguNSA2NS41dDY1LjUgMTU4%0D%0ALjV6Ii8+PC9zdmc+" alt="" class="streamsLogo">
           </button>
         </div>
         <div class = "streams" id = "bt" onclick = "streams(this)">
-          <button onclick = "streams(this)">
+          <button>
             <img src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB3aWR0aD0iMTc5MiIg%0D%0AaGVpZ2h0PSIxNzkyIiB2aWV3Qm94PSIwIDAgMTc5MiAxNzkyIiB4bWxucz0iaHR0cDovL3d3dy53%0D%0AMy5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik0xNzkyIDg0NnEwIDU4LTI5LjUgMTA1LjV0LTc5LjUg%0D%0ANzIuNXExMiA0NiAxMiA5NiAwIDE1NS0xMDYuNSAyODd0LTI5MC41IDIwOC41LTQwMCA3Ni41LTM5%0D%0AOS41LTc2LjUtMjkwLTIwOC41LTEwNi41LTI4N3EwLTQ3IDExLTk0LTUxLTI1LTgyLTczLjV0LTMx%0D%0ALTEwNi41cTAtODIgNTgtMTQwLjV0MTQxLTU4LjVxODUgMCAxNDUgNjMgMjE4LTE1MiA1MTUtMTYy%0D%0AbDExNi01MjFxMy0xMyAxNS0yMXQyNi01bDM2OSA4MXExOC0zNyA1NC01OS41dDc5LTIyLjVxNjIg%0D%0AMCAxMDYgNDMuNXQ0NCAxMDUuNS00NCAxMDYtMTA2IDQ0LTEwNS41LTQzLjUtNDMuNS0xMDUuNWwt%0D%0AMzM0LTc0LTEwNCA0NzJxMzAwIDkgNTE5IDE2MCA1OC02MSAxNDMtNjEgODMgMCAxNDEgNTguNXQ1%0D%0AOCAxNDAuNXptLTEzNzQgMTk5cTAgNjIgNDMuNSAxMDZ0MTA1LjUgNDQgMTA2LTQ0IDQ0LTEwNi00%0D%0ANC0xMDUuNS0xMDYtNDMuNXEtNjEgMC0xMDUgNDR0LTQ0IDEwNXptODEwIDM1NXExMS0xMSAxMS0y%0D%0ANnQtMTEtMjZxLTEwLTEwLTI1LTEwdC0yNiAxMHEtNDEgNDItMTIxIDYydC0xNjAgMjAtMTYwLTIw%0D%0ALTEyMS02MnEtMTEtMTAtMjYtMTB0LTI1IDEwcS0xMSAxMC0xMSAyNS41dDExIDI2LjVxNDMgNDMg%0D%0AMTE4LjUgNjh0MTIyLjUgMjkuNSA5MSA0LjUgOTEtNC41IDEyMi41LTI5LjUgMTE4LjUtNjh6bS0z%0D%0ALTIwNXE2MiAwIDEwNS41LTQ0dDQzLjUtMTA2cTAtNjEtNDQtMTA1dC0xMDUtNDRxLTYyIDAtMTA2%0D%0AIDQzLjV0LTQ0IDEwNS41IDQ0IDEwNiAxMDYgNDR6Ii8+PC9zdmc+" alt="" class="streamsLogo">
           </button>
         </div>
@@ -35,73 +35,81 @@
         <div class = "bookmark"><?xml version="1.0" encoding="utf-8"?>
           <svg width="380" height="70" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
             <path d="M1420 128q23 0 44 9 33 13 52.5 41t19.5 62v1289q0 34-19.5 62t-52.5 41q-19 8-44 8-48 0-83-32l-441-424-441 424q-36 33-83 33-23 0-44-9-33-13-52.5-41t-19.5-62v-1289q0-34 19.5-62t52.5-41q21-9 44-9h1048z" fill="orange"/>
-          </svg>
+          </svg>    
         </div>
         <div class = "semester">
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">1</div>
+            <div class = "num" id = "1">1</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem1List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">2</div>
+            <div class = "num" id = "2">2</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem2List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">3</div>
+            <div class = "num" id = "3">3</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem3List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">4</div>
+            <div class = "num" id = "4">4</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem4List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">5</div>
+            <div class = "num" id = "5">5</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem5List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">6</div>
+            <div class = "num" id = "6">6</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem6List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">7</div>
+            <div class = "num" id = "7">7</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem7List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num">8</div>
+            <div class = "num" id = "8">8</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
             </div>
           </div>
+          <div class = "hide" id = "sem8List"></div>
         </div>
       </div>
       </div>
