--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         </div>
       </div>
       <div class = "filenames">
-        
-        <button class="switch">Browse old syllabus!</button>
-        
-        <div class = "bookmark"><?xml version="1.0" encoding="utf-8"?>
+        <div class = "topBar">
+          <button class="switch">Browse old syllabus!</button>
+          <div class = "bookmark"><?xml version="1.0" encoding="utf-8"?>
           <svg viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
             <path d="M1420 128q23 0 44 9 33 13 52.5 41t19.5 62v1289q0 34-19.5 62t-52.5 41q-19 8-44 8-48 0-83-32l-441-424-441 424q-36 33-83 33-23 0-44-9-33-13-52.5-41t-19.5-62v-1289q0-34 19.5-62t52.5-41q21-9 44-9h1048z" fill="orange"/>
           </svg>
         </div>
+        </div>
         <div class = "semester">
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "1">1</div>
+            <div class = "num" id = "1">Semester 1</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -52,7 +52,7 @@
           </div>
           <div class = "hide" id = "sem1List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "2">2</div>
+            <div class = "num" id = "2">Semester 2</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -61,7 +61,7 @@
           </div>
           <div class = "hide" id = "sem2List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "3">3</div>
+            <div class = "num" id = "3">Semester 3</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -70,7 +70,7 @@
           </div>
           <div class = "hide" id = "sem3List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "4">4</div>
+            <div class = "num" id = "4">Semester 4</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -79,7 +79,7 @@
           </div>
           <div class = "hide" id = "sem4List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "5">5</div>
+            <div class = "num" id = "5">Semester 5</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -88,7 +88,7 @@
           </div>
           <div class = "hide" id = "sem5List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "6">6</div>
+            <div class = "num" id = "6">Semester 6</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -97,7 +97,7 @@
           </div>
           <div class = "hide" id = "sem6List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "7">7</div>
+            <div class = "num" id = "7">Semester 7</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -106,7 +106,7 @@
           </div>
           <div class = "hide" id = "sem7List"></div>
           <div class = "semesters" onclick="myFunction(this)">
-            <div class = "num" id = "8">8</div>
+            <div class = "num" id = "8">Semester 8</div>
             <div class = "bars">
               <div class="bar1"></div>
               <div class="bar2"></div>
